# DCS-Log-Viewer-Public

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
dcs_log_cli/: app.py  highlighter.py  store.py  styles.tcss
dcs_log_core/: __init__.py  config.py  tailer.py
dcs_log_viewer/: config.py  main.py  parser.py  routes.py  tailer.py  ws.py
dcs_log_viewer/static/: index.html
dcs_log_viewer/static/css/: style.css
dcs_log_viewer/static/js/: app.js  filters.js  grid.js  highlighter.js  ws.js
dcs_log_web/: main.py  routes.py  ws.py
dcs_log_web/static/: index.html
dcs_log_web/static/css/: style.css
dcs_log_web/static/js/: grid.js  highlighter_dcs.js
tests/: test_config.py  test_main.py  test_parser.py  test_routes.py  test_tailer.py  test_ws.py
tests/javascript/: filters.test.js  grid.test.js  highlighter.test.js  ws.test.js
tests/python/: test_config.py  test_main.py  test_parser.py  test_routes.py  test_tailer.py  test_ws.py
