[project]
name = "dcs-log-viewer"
version = "1.0.0"
description = "High-performance real-time log visualizer for Digital Combat Simulator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "watchfiles>=0.24.0",
    "aiofiles>=24.1.0",
    "textual>=0.86.0",
]

[project.scripts]
dcs-log-viewer = "dcs_log_web.main:main"
dcs-log-cli = "dcs_log_cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dcs_log_core", "dcs_log_web", "dcs_log_cli"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

